# convertMissalignment

./: .gitignore  CHANGELOG.md  CHANGES_V8.md  CODE_MANIFEST.sha256  GITHUB.md  INSTALL.md  MANIFEST.in  PIPELINE_VERSION  README.md  RELEASE_CHECKSUMS.txt  USER_GUIDE.md  VERSIONING.md  export_warp_to_imod.py  missalign_cli.py  missalignment_script_prepare.py  prepare_imod_to_warp.py  prepare_missalignment_input.py  pyproject.toml  refine_local.py  requirements-runtime.txt  setup_imod_recon.py  setup_missalign_project.py  setup_warp_project.py  validate_interoperability.py  warp_preprocess.py  warp_project.py
config/: cluster_profiles.toml  conversion_presets.toml  project_settings.example.toml  project_settings.schema.json  refinement_presets.toml
convertMissalignment/: __init__.py  __main__.py  _version.py  cli.py
legacy_v7/: CHANGES_V7_ALPHA2.md  CHANGES_V7_ALPHA3.md  CHANGES_V7_ALPHA4.md  CHANGES_V7_ALPHA5.md  CHANGES_WARPTOOLS_PHASE1.md  README_V7.md  V5_TO_V6_MIGRATION.md  V6_TO_V7_MIGRATION.md  jobs.py.v7bak  migrate_phase2_results.py  runlayout.py.v7bak
scripts/: 01_extract_etomo_params.py  02_convert_using_params.py  03_run_missalignment.py  audit_imod_xf.py  auto_missalign_from_etomo.py  clone_warp_projects.py  collect_environment.py  etomo_to_warp.py  export_condition_results.py  export_missalign_xml_to_imod_xf.py  generate_aligned_stack.py  generate_slurm.sh  generate_slurm_fixed.sh  generate_synthetic_affine_test.py  imod_affine.py  make_imod_halfsets.py  patch_imod_scripts.py  resolve_imod_geometry.py  run_geometry_tests.py  run_warp_conversion.py  runtime_env.py  setup_missalign_inputs.sh  trimvol_regions.py  validate_with_imod.py  warp_to_imod_affine.py
tests/: test_adversarial.py  test_affine_math.py  test_ali_generation_real_imod.py  test_alignment_models.py  test_axis_convention_warp.py  test_cli_compatibility.py  test_cli_config_matrix.py  test_cluster_integration.py  test_condition_input.py  test_constrained_export_real_imod.py  test_constraints_scopes_reg.py  test_converter_positioning_fake_warp.py  test_etomo_quarter_turn_integration_v7.py  test_extra_binning_cli_removed.py  test_finalize_composition.py  test_finalize_phase3.py  test_finalize_warp_xml.py  test_generate_aligned_stack_orchestration.py  test_gradients_extended.py  test_grid_encoding.py  test_image_materialize.py  test_image_models_mutations.py  test_imod_center_convention.py  test_imod_positioning.py  test_imod_revision_export.py  test_independent_oracle.py  test_init_canonical.py  test_interop_export.py  (+58 more)
(+119 files in other folders)
