[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convertMissAlignment"
dynamic = ["version"]
description = "IMOD/eTomo to Warp and MissAlignment cryo-electron tomography processing pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "mrcfile>=1.4",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
warp = ["warpylib"]
refinement = ["torch>=2.0"]
debug = ["matplotlib>=3.7"]
test = ["pytest>=8", "build>=1.2", "twine>=5"]
full = ["warpylib", "torch>=2.0", "matplotlib>=3.7"]

[project.scripts]
convertMissalignment = "convertMissalignment.cli:main"
convertmissalignment = "convertMissalignment.cli:main"
missalign = "convertMissalignment.cli:main"
missalign-setup = "setup_missalign_project:main"
missalign-reconstruct = "convertMissalignment.cli:reconstruct_main"
missalign-prepare = "prepare_imod_to_warp:main"
missalign-input = "prepare_missalignment_input:main"
missalign-preprocess = "warp_preprocess:main"
missalign-status = "warp_project:main"
missalign-export = "export_warp_to_imod:main"
missalign-refine = "refine_local:main"
missalign-imod-recon = "setup_imod_recon:main"

[tool.setuptools.dynamic]
version = {attr = "convertMissalignment._version.__version__"}

[tool.setuptools]
include-package-data = true
py-modules = [
  "missalign_cli",
  "missalignment_script_prepare",
  "setup_missalign_project",
  "prepare_imod_to_warp",
  "prepare_missalignment_input",
  "warp_preprocess",
  "warp_project",
  "setup_warp_project",
  "setup_imod_recon",
  "export_warp_to_imod",
  "refine_local",
  "validate_interoperability",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "convertMissalignment",
  "convertMissalignment.*",
  "scripts",
  "scripts.*",
  "tools",
  "tools.*",
  "config",
  "config.*",
  "cluster_integration",
  "cluster_integration.*",
]
exclude = ["tests*", "legacy_v7*"]

[tool.setuptools.package-data]
config = ["*.toml", "*.json", "examples/*.toml"]
scripts = ["*.sh"]
"cluster_integration.missalignment_patch" = [
  "PINNED_VERSION",
  "README.md",
  "*.sh",
  "patches/*.template",
]
